# gk_2024_proj_2

./: .devnotes  README.md
app/: .devnotes  CMakeLists.txt  data.qrc  images.qrc
app/data/: crazy.txt  example1  example3
app/include/: Constants.h  Intf.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/include/GraphicObjects/: BezierPoint3D.h  BitMap.cpp  DrawingWidget.h
app/include/ManagingObjects/: ObjectMgr.h  SceneMgr.h  StateMgr.h  ToolBar.h
app/include/PrimitiveData/: ActiveEdge.h  Triangle.h  Vertex.h
app/include/Rendering/: BitMap.h  Mesh.h  Texture.h
app/include/UiObjects/: DoubleSlider.h  TextButton.h  ToolBar.h
app/src/: BezierPoint3D.cpp  BitMap.cpp  Constants.cpp  DoubleSlider.cpp  DrawingWidget.cpp  Mesh.cpp  ObjectMgr.cpp  SceneMgr.cpp  StateMgr.cpp  TextButton.cpp  Texture.cpp  ToolBar.cpp  Vertex.cpp
